--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: FF E4, jump to 
 SEOTitle: FF E4 | Jump ESP | Assembly
-description: "描述"
+description: "FFE4 Jump ESP"
 keyword: "FF E4, Jump ESP, Assembly, Pentest"
 baseurl: ""
 theme: jekyll-theme-hacker
